Moved argline to property.